# mimee

./: Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yaml  release.yaml
etc/: generet.ps1  mime_types.txt
src/: lib.rs  mime_dict.rs
