[package]
name = "mimee"
version = "0.1.0"
edition = "2021"
authors = ["Alireza Baloochi <Dev.AlirezaBaloochi@gmail.com>"]
description = "A simple crate for detection of a file's MIME type by its extension."
license="MIT"
repository = "https://github.com/Alirexaa/mimee"
documentation = "https://docs.rs/mimee/"
readme = "README.md"
keywords = ["mime", "extension", "media-types", "filesystem"]
categories = ["filesystem", "web-programming"]

[dependencies]

[dev-dependencies]
rstest = "0.24.0"
